<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_add_new_route"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.mateuszskolimowski.inzynierka.activities.routes_list.AddOrUpdateNewRouteActivity">

        <TextView
            android:text="@string/about_route_name_edittext"
            android:layout_width="wrap_content"
            style="@style/TextViewStyle.Medium.Bold"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/route_name_edittext"
            style="@style/EditTextStyle"
            android:hint="@string/route_name"
            android:text="test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/about_route_time_edittext"
            style="@style/TextViewStyle.Medium.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <include android:id="@+id/start_time_layout"
            layout="@layout/time_layout"/>

        <include android:id="@+id/end_time_layout"
            layout="@layout/time_layout"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/unavailable_add_route_button"
                android:theme="@style/ButtonStyle.Unavailable"
                android:layout_alignParentBottom="true"
                android:text="@string/add_update_route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:visibility="gone"
                android:id="@+id/available_add_route_button"
                android:theme="@style/ButtonStyle.Available"
                android:layout_alignParentBottom="true"
                android:text="@string/add_update_route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
