<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/are_you_sure"
        android:layout_width="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/msg_dialog_textview"
        android:textColor="#000000"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/no_textview"
            android:textColor="@color/colorAccent"
            android:text="@string/no"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toLeftOf="@id/no_textview"
            android:id="@+id/yes_textview"
            android:textColor="@color/colorAccent"
            android:text="@string/yes"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>