<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_route_point"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.mateuszskolimowski.inzynierka.activities.add_route_points.AddNewRoutePointActivity">

    <include layout="@layout/time_choosing_layout"
        android:id="@+id/time_choosing_layout"/>

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/choose_localization_of_point"
        style="@style/TextViewStyle.Medium.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        />

    <Button
        android:id="@+id/choose_from_last_picked_locations_button"
        android:theme="@style/ButtonStyle.Available"
        android:text="@string/choose_from_last_picked_locations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/available_buttons_layout"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/available_add_and_contiune_button"
                android:layout_weight="1"
                android:theme="@style/ButtonStyle.Available"
                android:text="@string/add_and_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/available_add_and_finish_button"
                android:layout_weight="1"
                android:theme="@style/ButtonStyle.Available"
                android:text="@string/add_and_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/unavailable_buttons_layout"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_weight="1"
                android:theme="@style/ButtonStyle.Unavailable"
                android:text="@string/add_and_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_weight="1"
                android:theme="@style/ButtonStyle.Unavailable"
                android:text="@string/add_and_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
